@@ -3,7 +3,15 @@
 
   Project : SHTRIH-M JavaPOS fiscal printer driver
   Company : SHTRIH-M www.shtrih-m.ru (495) 787-6090
-  
+
+********************************************************************************
+
+  July 20 2017
+  deviceServiceVersion = 1013454
+	
+  [-] Added FSPrintRecItem and FSCloseReceipt support to text report
+  [-] Fixed text report payment type names
+    
 ********************************************************************************
 
   July 19 2017, 14:00
